[project]
name = "myapp"
version = "0.1.0"
description = "Reference example: layered architecture / ports & adapters in modern Python (FastAPI + SQLAlchemy)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",          # required by fastapi.testclient.TestClient
    "import-linter>=2.0",   # the fitness function that enforces the layering law
]
# The default install uses SQLite (zero setup). To run the twelve-factor swap in
# README §10 against Postgres/Lakebase you also need a driver:  uv sync --extra postgres
postgres = [
    "psycopg[binary]>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myapp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
